Done with the Linking

--- a/frontend_web/src/App.css
+++ b/frontend_web/src/App.css
@@ -21,7 +21,7 @@
   color: #09d3ac;
 }
 nav{
-  display: flex;
+  display: inline;
   justify-content: space-around;
   align-content: center;
   min-height: 10vh;
